syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.boni";
option java_outer_classname = "MicronautGrpc";
option objc_class_prefix = "HLW";

package com.boni;

service MicronautGrpcService {
  rpc send (MicronautGrpcRequest) returns (MicronautGrpcReply) {}
}

message MicronautGrpcRequest {
  string name = 1;
}

message MicronautGrpcReply {
  string message = 1;
}